Align dashboard cards

--- a/profiles/templates/profiles/dashboard.html
+++ b/profiles/templates/profiles/dashboard.html
@@ -12,7 +12,7 @@
                     <p class="card-text-below">Paths Completed</p>
                 </div>
                 <div class="dashboard-card">
-                    <p class="card-text-above">Modules Completed</p>
+                    <p class="card-text-below">Modules Completed</p>
                     {{ completed_modules_count }}
                 </div>
                 <div class="dashboard-card">
