Add cursor pointer to doughnut section of dashboard

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -637,7 +637,7 @@ body {
     background-size: 60px;
     background-position: center;
     box-shadow: rgba(14, 14, 14, 0.6) -5px 5px 35px -3px;
-
+    cursor: pointer;
 }
 
 .dashboard-area-4 {
