Update dashboard/paths styles and add fonts

--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -39,7 +39,7 @@
             {% endfor %}
         </div>
     {% else %}
-        <h3 class="section-header">No paths assigned.</h3>
+        <h3 class="section-heading">No paths assigned.</h3>
     {% endif %}
 </div>
 
