--- a/profiles/templates/profiles/dashboard.html
+++ b/profiles/templates/profiles/dashboard.html
@@ -29,11 +29,23 @@
         </div>
 
         <div class="dashboard-area-2">
-            <p></p>
+
         </div>
 
         <div class="dashboard-area-3">
             <canvas id="completionChart" width="400" height="400"></canvas>
+            <div class="progress-circle">
+                <div class="percent">
+                    <svg>
+                        <circle cx="104" cy="104" r="90"></circle>
+                        <circle cx="104" cy="104" r="90" style="--percentage: 25;"></circle>
+                    </svg>
+                    <div class="number">
+                        <h2>75<span>%</span></h2>
+                    </div>
+                </div>
+            </div>
+            
         </div>
 
         <div class="dashboard-area-4">
