--- a/static/css/base.css
+++ b/static/css/base.css
@@ -633,6 +633,7 @@ body {
 }
 
 .dashboard-area-3 { 
+    position: relative;
     grid-area: 3 / 1 / 7 / 4;
     background-color: var(--background-color-main);
     padding: 1rem;
@@ -663,7 +664,7 @@ body {
 }
 
 .vertical-text {
-    margin-right: 2rem;
+    margin-right: 1rem;
     font-family: "Chakra Petch", sans-serif;
     font-size: 1.8rem;
     font-weight: bold;
@@ -677,4 +678,84 @@ body {
 
 .leaderboard-chart-container {
     flex-grow: 1;
+}
+
+.progress-circle {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-52.5%, -35%); /* Raising the left number moves the circle left. Raising the right number moves the circle up. */
+    border-radius: 50%;
+    height: 208px;
+    width: 208px;
+    padding: 0;
+    margin: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: transparent;
+}
+
+/* Progress meter uses CSS sourced from the following YouTube video: https://www.youtube.com/watch?v=t7eHSAXW718 */
+
+.percent {
+    position: relative;
+    width: 208px;
+    height: 208px;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.percent .number {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
+}
+
+.percent .number h2 {
+    color: #fff;
+    font-family: "Chakra Petch", sans-serif;
+    font-weight: 700;
+    font-size: 3rem;
+    margin: 0;
+    transform: translate(8px)
+
+}
+
+.percent .number h2 span {
+    font-size: 3rem;
+    color: #fff;
+}
+
+svg {
+    position: absolute;
+    width: 208px;
+    height: 208px;
+    z-index: 0;
+}
+
+circle {
+    width: 100%;
+    height: 100%;
+    fill: none;
+    stroke: #191919;
+    stroke-width: 10;
+    stroke-linecap: round;
+    transform: rotate(-90deg) translate(4px, 4px);
+    transform-origin: 50% 50%;
+}
+
+circle:nth-child(2) {
+    stroke-dasharray: 565.48;
+    stroke-dashoffset: calc(565.48 - (565.48 * var(--percentage)) / 100);
+    stroke: #1b76ff;
+    transition: stroke-dashoffset 0.5s ease;
 }
