Add badge functionality and sample badges

--- a/templates/base.html
+++ b/templates/base.html
@@ -52,7 +52,7 @@
                   <a class="nav-link mx-3" href="{% url 'profile' %}"><i class="fa-sharp fa-solid fa-route"></i> My Paths</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link mx-3" href="{% url 'profile' %}"><i class="fa-sharp fa-solid fa-award"></i> My Badges</a>
+                  <a class="nav-link mx-3" href="{% url 'badges' %}"><i class="fa-sharp fa-solid fa-award"></i> My Badges</a>
                 </li>
 
                 <!-- Divider -->
