--- a/static/css/base.css
+++ b/static/css/base.css
@@ -809,3 +809,69 @@ circle:nth-child(2) {
 .streak-card .fa-fire-flame-curved {
     color: #ff6347;
 }
+
+/* Badge Styling */
+
+.badge-container {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    gap: 2rem; /* Increased gap for more space between badges */
+    justify-content: center;
+    padding: 2rem;
+}
+
+.badge-card {
+    background-color: var(--background-color-dark);
+    border-radius: 15px;
+    padding: 2rem;
+    text-align: center;
+    font-family: "Chakra Petch", sans-serif;
+    color: var(--text-color);
+    box-shadow: rgba(0, 0, 0, 0.3) 0px 5px 15px;
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    border: 4px solid var(--accent-color-1);
+    height: 350px;
+    width: 300px;
+    margin: auto;
+    margin-bottom: 5rem;
+}
+
+.badge-card.achieved {
+    border-color: var(--accent-color-2);
+}
+
+.badge-icon {
+    font-size: 4rem;
+    margin-bottom: 2.5rem;
+    color: var(--accent-color-1);
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.badge-card.achieved .badge-icon {
+    color: var(--accent-color-2);
+}
+
+.badge-card h3 {
+    font-size: 1.7rem;
+    color: var(--accent-color-1);
+    margin-bottom: 1rem;
+}
+
+.badge-card.achieved h3 {
+    color: var(--accent-color-2);
+}
+
+.badge-card p {
+    font-size: 1.2rem;
+    color: var(--text-color);
+}
+
+.badge-card:hover {
+    transform: translateY(-5px);
+    box-shadow: rgba(0, 0, 0, 0.4) 0px 8px 20px;
+}
