--- a/static/css/base.css
+++ b/static/css/base.css
@@ -320,8 +320,6 @@ body {
     border: rgba(152, 175, 131, 1) solid 4px;
 }
 
-
-
 .path-card h3 {
     font-size: 1.5rem;
     margin-bottom: 1.5rem;
@@ -339,7 +337,6 @@ body {
     margin: 0;
     margin-top: -0.5rem;
     margin-bottom: 0.75rem;
-
 }
 
 .path-card p {
@@ -439,6 +436,17 @@ body {
     flex-direction: column;
     justify-content: space-between;
     height: 100%;
+    cursor: pointer;
+}
+
+.lesson-card-link {
+    text-decoration: none;
+    color: inherit;
+    display: block;
+}
+
+.lesson-card:hover {
+    border: rgba(255, 135, 27, 1) solid 4px;
 }
 
 .lesson-description {
@@ -477,11 +485,6 @@ body {
 
 .lesson-details li strong {
     color: var(--accent-color-1);
-}
-
-.lesson-card:hover {
-    border: rgba(255, 135, 27, 1) solid 4px;
-    cursor: pointer;
 }
 
 .lesson-card.completed {
@@ -601,8 +604,6 @@ body {
 .dashboard-card:nth-child(3) {
     transform: translateY(-15px);
 }
-
-
 
 .card-text-below, .card-text-above {
     position: absolute;
