--- a/content/templates/content/text_lesson_detail.html
+++ b/content/templates/content/text_lesson_detail.html
@@ -2,14 +2,27 @@
 
 {% block content %}
 <div class="lesson-detail-container">
-    <a href="{{ module_url }}" class="primary-button">
+    <a href="{{ module_url }}" class="primary-button back-button">
         <i class="back-icon fa-sharp fa-arrow-left"></i>Back
     </a>
 
-    <h1>{{ lesson.name }}</h1>
-    <p>{{ lesson.description }}</p>
-    <div class="lesson-content">
-        {{ lesson.content|safe }}
+    <h1 class="lesson-heading">{{ lesson.name }}</h1>
+    <div class="lesson-detail-text-container">
+        <div class="lesson-detail-text-container-area-1">
+            <div class="description-container">
+                <h2 class="lesson-container-heading">Description</h2>
+                <p>{{ lesson.description }}</p>
+            </div>
+        </div>
+        <div class="lesson-detail-text-container-area-2">
+            <h2 class="lesson-container-heading">Content</h2>
+            <div class="lesson-content">
+                {{ lesson.content|linebreaksbr }}
+            </div>
+        </div>
+        <div class="lesson-detail-text-container-area-3">
+            <button class="primary-button">Complete Lesson</button>
+        </div>
     </div>
 </div>
 {% endblock %}
