--- a/static/css/base.css
+++ b/static/css/base.css
@@ -884,3 +884,97 @@ circle:nth-child(2) {
     font-size: 1.5rem;
     color: var(--accent-color-2);
 }
+
+/* Lesson Detail Styling */
+
+.lesson-heading {
+    font-family: "Orbitron", sans-serif;
+    color: var(--text-color);
+    font-size: 3rem;
+    text-align: center;
+    margin-top: 2rem;
+    margin-bottom: 3rem;
+}
+
+.back-button {
+    position: absolute;
+    top: 0px;
+    left: 20px;
+    z-index: 1000;
+}
+
+.lesson-detail-container {
+    position: relative;
+}
+
+.lesson-detail-text-container {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: auto 1fr auto;
+    gap: 0px;
+    height: 750px;
+    padding-left: 3rem;
+    padding-right: 3rem;
+}
+
+.lesson-container-heading {
+    font-family: "Comfortaa", monospace;
+    font-size: 1.7rem;
+    color: var(--accent-color-1);
+    margin-bottom: 1rem;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    font-weight: bold;
+    text-align: left;
+}
+
+
+.lesson-detail-text-container-area-1 { 
+    grid-area: 1 / 1 / 2 / 2;
+    border: 7px solid var(--background-color-dark);
+    border-bottom: none;
+    background-color: var(--background-color-main);
+    padding: 20px;
+    display: flex;
+    align-items: center;
+    border-top-left-radius: 50px;
+    border-top-right-radius: 50px;
+    color: var(--text-color);
+    font-family: "Comfortaa", monospace;
+    background-image: url("/static/media/images/Texture14.png");
+    background-size: 10px;
+    background-position: center;
+}
+
+.description-container {
+    width: 50%;
+    padding-right: 20px;
+}
+
+.lesson-detail-text-container-area-2 { 
+    grid-area: 2 / 1 / 3 / 2; 
+    border: 7px solid var(--background-color-dark);
+    background-color: var(--background-color-main);
+    padding: 20px;
+    overflow-y: auto;
+    color: var(--text-color);
+    font-family: "Comfortaa", monospace;
+}
+
+.lesson-detail-text-container-area-3 { 
+    grid-area: 3 / 1 / 4 / 2;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 7px solid var(--background-color-dark);
+    border-top: none;
+    background-color: var(--background-color-main);
+    padding-top: 2rem;
+    padding-bottom: 2rem;
+    border-bottom-left-radius: 50px;
+    border-bottom-right-radius: 50px;
+    color: var(--text-color);
+    background-image: url("/static/media/images/Texture14.png");
+    background-size: 10px;
+    background-position: center;
+}
