Add video lesson layout and styling

--- a/content/templates/content/video_lesson_detail.html
+++ b/content/templates/content/video_lesson_detail.html
@@ -2,23 +2,37 @@
 
 {% block content %}
 <div class="lesson-detail-container">
-    <a href="{{ module_url }}" class="primary-button">
+    <a href="{{ module_url }}" class="primary-button back-button">
         <i class="back-icon fa-sharp fa-arrow-left"></i>Back
     </a>
 
-    <h1>{{ lesson.name }}</h1>
-    <p>{{ lesson.description }}</p>
-    
-    {% if embed_url %}
-    <div class="lesson-video">
-        <iframe width="560" height="315" src="{{ embed_url }}" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-    </div>
-    {% else %}
-    <p>No video is available for this lesson.</p>
-    {% endif %}
-    
-    <div class="lesson-content">
-        {{ lesson.content|safe }}
+    <h1 class="lesson-heading">{{ lesson.name }}</h1>
+    <div class="lesson-detail-video-container">
+        <div class="lesson-detail-video-container-area-1">
+            <h2 class="lesson-container-heading">Lesson Description</h2>
+            <p>{{ lesson.description }}</p>
+        </div>
+
+        <div class="lesson-detail-video-container-area-2">
+            <h2 class="lesson-container-heading">Additional Content</h2>
+            <div class="lesson-content">
+                {{ lesson.content|linebreaksbr }}
+            </div>
+        </div>
+
+        <div class="lesson-detail-video-container-area-3">
+            {% if embed_url %}
+            <div class="lesson-video">
+                <iframe width="560" height="315" src="{{ embed_url }}" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
+            {% else %}
+            <p>A video URL has not been assigned to this lesson. Please contact an administrator and inform them of this error.</p>
+            {% endif %}
+        </div>
+
+        <div class="lesson-detail-video-container-area-4">
+            <button class="primary-button submit-button">Complete Lesson</button>
+        </div>
     </div>
 </div>
 {% endblock %}
