--- a/content/templates/content/quiz_lesson_detail.html
+++ b/content/templates/content/quiz_lesson_detail.html
@@ -9,7 +9,7 @@
     <h1>{{ lesson.name }}</h1>
     <p>{{ lesson.description }}</p>
     <div class="lesson-content">
-        {{ lesson.content|safe }}
+        {{ lesson.content|linebreaksbr}}
     </div>
     <form method="post">
         {% csrf_token %}
