--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1056,3 +1056,70 @@ circle:nth-child(2) {
     color: var(--text-color);
     height: 150px;
 }
+
+.lesson-detail-deliverable-container {
+    display: grid;
+    grid-template-columns: repeat(7, 1fr);
+    grid-template-rows: 160px 390px 150px;
+    gap: 0px;
+    height: 100%;
+    padding-left: 0rem;
+    padding-right: 0rem;
+}
+
+.lesson-detail-deliverable-container-area-1 { 
+    grid-area: 1 / 2 / 2 / 7;
+    border: 5px solid var(--background-color-dark);
+    background-color: var(--background-color-main);
+    padding: 20px;
+    border-top-left-radius: 50px;
+    border-top-right-radius: 50px;
+    border-bottom: none;
+    background-image: url("/static/media/images/Texture14.png");
+    background-size: 10px;
+    background-position: center;
+    color: var(--text-color);
+    font-family: "Comfortaa", monospace;
+    height: 160px;
+    overflow-y: auto;
+}
+
+.lesson-detail-deliverable-container-area-2 { 
+    grid-area: 2 / 2 / 3 / 5;
+    border: 5px solid var(--background-color-dark);
+    background-color: var(--background-color-main);
+    padding: 20px;
+    overflow-y: auto;
+    color: var(--text-color);
+    font-family: "Comfortaa", monospace;
+    height: 390px;
+}
+
+.lesson-detail-deliverable-container-area-3 { 
+    grid-area: 2 / 5 / 3 / 7;
+    border: 5px solid var(--background-color-dark);
+    background-color: var(--background-color-main);
+    padding: 20px;
+    overflow-y: auto;
+    color: var(--text-color);
+    font-family: "Comfortaa", monospace;
+    height: 390px;
+}
+
+.lesson-detail-deliverable-container-area-4 { 
+    grid-area: 3 / 2 / 4 / 7;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 5px solid var(--background-color-dark);
+    border-top: none;
+    background-color: var(--background-color-main);
+    padding: 20px;
+    border-bottom-left-radius: 50px;
+    border-bottom-right-radius: 50px;
+    background-image: url("/static/media/images/Texture14.png");
+    background-size: 10px;
+    background-position: center;
+    color: var(--text-color);
+    height: 150px;
+}
