--- a/content/templates/content/quiz_lesson_detail.html
+++ b/content/templates/content/quiz_lesson_detail.html
@@ -9,21 +9,16 @@
     <h1>{{ lesson.name }}</h1>
     <p>{{ lesson.description }}</p>
     <div class="lesson-content">
-        {{ lesson.content|linebreaksbr}}
+        {{ lesson.content|linebreaksbr }}
     </div>
     <form method="post">
         {% csrf_token %}
-        {% for question in lesson.quiz_questions.all %}
+        {% for item in questions %}
             <div class="quiz-question">
-                <p>{{ question.question_text }}</p>
-                <input type="radio" name="question_{{ question.pk }}" value="1"> {{ question.correct_answer }}<br>
-                <input type="radio" name="question_{{ question.pk }}" value="2"> {{ question.incorrect_answer_1 }}<br>
-                {% if question.incorrect_answer_2 %}
-                    <input type="radio" name="question_{{ question.pk }}" value="3"> {{ question.incorrect_answer_2 }}<br>
-                {% endif %}
-                {% if question.incorrect_answer_3 %}
-                    <input type="radio" name="question_{{ question.pk }}" value="4"> {{ question.incorrect_answer_3 }}<br>
-                {% endif %}
+                <p>{{ item.question.question_text }}</p>
+                {% for answer in item.answers %}
+                    <input type="radio" name="question_{{ item.question.pk }}" value="{{ answer }}" required> {{ answer }}<br>
+                {% endfor %}
             </div>
         {% endfor %}
         <button type="submit" class="primary-button">Submit Quiz</button>
