--- a/content/templates/content/quiz_results.html
+++ b/content/templates/content/quiz_results.html
@@ -4,7 +4,7 @@
 <div class="quiz-results-wrapper">
     <div class="quiz-results-container">
         <h1 class="quiz-results-heading">Quiz Results</h1>
-        <p class="quiz-score-1">You answered {{ correct_answers }} out of {{ total_questions }} questions correctly.</p>
+        <!-- <p class="quiz-score-1">You answered {{ correct_answers }} out of {{ total_questions }} questions correctly.</p> -->
         <p class="quiz-score-2">Your score: {{ score|floatformat:2 }}%</p>
 
         {% if passed %}
