Update logic to allow users to complete lessons

--- a/content/templates/content/deliverable_lesson_detail.html
+++ b/content/templates/content/deliverable_lesson_detail.html
@@ -31,7 +31,10 @@
         </div>
 
         <div class="lesson-detail-deliverable-container-area-4">
-            <button class="primary-button">Complete Lesson</button>
+            <form method="post">
+                {% csrf_token %}
+                <button type="submit" class="primary-button">Complete Lesson</button>
+            </form>
         </div>
     </div>
 </div>
