--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1039,6 +1039,11 @@ circle:nth-child(2) {
     margin-right: auto;
 }
 
+.missing-video-text {
+    margin: 5rem;
+    text-align: center;
+}
+
 .lesson-detail-video-container-area-4 { 
     grid-area: 3 / 2 / 4 / 7;
     display: flex;
